Add PDOS Plotter and Config.py for automatic xlims and fermi for PDOS.

--- a/ui.ui
+++ b/ui.ui
@@ -376,7 +376,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>NEB Plotter</string>
+     <string>PDOS Plotter</string>
     </property>
    </widget>
   </widget>
