--- a/ui.ui
+++ b/ui.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>359</width>
-    <height>395</height>
+    <height>435</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -318,7 +318,7 @@
      <x>10</x>
      <y>330</y>
      <width>341</width>
-     <height>61</height>
+     <height>81</height>
     </rect>
    </property>
    <property name="title">
@@ -377,6 +377,19 @@
     </property>
     <property name="text">
      <string>PDOS Plotter</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="cutoffBtn">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Cutoff Finder</string>
     </property>
    </widget>
   </widget>
